Align event status buble correctly

--- a/events/scss/events.scss
+++ b/events/scss/events.scss
@@ -170,6 +170,7 @@ table.space-requests {
 html#space-request {
     div.status {
         float: right;
+        margin-top: 20px;
         padding: 6px 8px;
         font-weight: bold;
         color: $white;
